--- a/ProjetosUdemy/projeto-museu/css/style.css
+++ b/ProjetosUdemy/projeto-museu/css/style.css
@@ -48,8 +48,9 @@ header h1 strong {
 }
 
 #nav-menu ul li a:hover {
-    color: #fff;
+    color: rgb(0, 112, 0);
     transition: 0.3s;
+    border-bottom: 1px solid #535858;
 }
 
 /*Formatando o container*/
